--- a/src/app/user/dashboard/views/main.html
+++ b/src/app/user/dashboard/views/main.html
@@ -18,7 +18,7 @@
                     <li><a ui-sref="main.user.task">Pekerjaan</a></li>
                     <li><a ui-sref="main.user.project">Project</a></li>
                     <li><a ui-sref="main.user.subordinat">Subordinat</a></li>
-                    <li><a ui-sref="main.user">Dokumen</a></li>
+                    <li><a ui-sref="main.user.document">Dokumen</a></li>
                    
                     <li dropdown>
                         <a href="" dropdown-toggle>Laporan<span class="caret"></span></a>
