--- a/src/app/user/subordinat/views/list.html
+++ b/src/app/user/subordinat/views/list.html
@@ -15,7 +15,7 @@
 	            </div>
 
              	<div class="panel-body">
-             		<abn-tree tree-data="vm.tree"></abn-tree>
+             		<abn-tree tree-data="vm.tree" expand-level="0"></abn-tree>
              	</div>
              </div>
 
