--- a/src/app/admin/document/views/list.html
+++ b/src/app/admin/document/views/list.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row">
-    	<div class="col-md-5">
+    	<div class="col-md-12">
 
     		<div class="panel panel-default">
 	            <div class="panel-heading clearfix">
@@ -15,12 +15,12 @@
 	            </div>
 
              	<div class="panel-body">
-             		<document-tree tree-data="vm.tree"></document-tree>
+             		<document-tree tree-data="vm.tree" expand-level="0"></document-tree>
              	</div>
              </div>
     	</div>
 
-    	<div class="col-md-7">
+    	<div class="col-md-12">
     		<ng-pdf template-url="app/components/partials/viewer.html" scale="page-fit"></ng-pdf>
     	</div>
     </div>
