--- a/src/app/admin/form/views/list.html
+++ b/src/app/admin/form/views/list.html
@@ -50,7 +50,7 @@
 	                                <td>
                                         <a ng-disabled="!object.document" ng-href="{{ $root.FILE_HOST }}/upload/form/{{ object.document }}" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a>&nbsp;|
                                         <a ng-click="vm.update(object.id)" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>&nbsp;|
-                                        <a ng-click="vm.destroy(object.id, $id)" class="btn btn-danger btn-xs"><i class="fa fa-close"></i></a>
+                                        <a ng-click="vm.destroy(object.id, $index)" class="btn btn-danger btn-xs"><i class="fa fa-close"></i></a>
                                     </td>
 	                            </tr>
 	                        </tbody>
